Fixed spacing on the members in the member listing so that there isn't extra spacing at the bottom (moved the spacing to the rows, made an exception for the last row)

--- a/theme/mindcrack/assets/stylesheets/style.scss
+++ b/theme/mindcrack/assets/stylesheets/style.scss
@@ -905,7 +905,6 @@ section#latest-news {
 article.member-list {
 	@include make-col();
 	@include make-col-span(3);
-	margin-bottom: 1rem;
 
 	.member-thumb {
 		width: 100%;
@@ -918,11 +917,11 @@ article.member-list {
 
 	h2 {
 		font-size: 4.5vw;
+		margin-bottom: 0;
 	}
 
 	@include media-breakpoint-up(xs) {
 		.member-thumb { margin-bottom: 2.25vw; }
-		margin-bottom: 1.75vw;
 	}
 	@include media-breakpoint-up(sm) {
 		h2 { font-size: 1.5rem; }
@@ -930,7 +929,6 @@ article.member-list {
 	@include media-breakpoint-up(md) {
 		h2 { font-size: 1rem; }
 		.member-thumb { margin-bottom: 0.5rem; }
-		margin-bottom: 0.4rem;
 	}
 	@include media-breakpoint-up(lg) {
 		h2 { font-size: 1.3rem; }
@@ -943,14 +941,31 @@ article.member-list {
 .member-row-2 {
 	@include media-breakpoint-down(sm) {
 		@include clearfix();
+		margin-bottom: 2rem;
+		&:last-child {
+			margin-bottom: 0;
+		}
 		article.member-list {
 			@include make-col-span(6);
 		}
 	}
+
+	@include media-breakpoint-down(xs) {
+		margin-bottom: 7vw;
+	}
 }
 
 .member-row-4 {
+	margin-bottom: 2rem;
 	@include make-row();
+
+	@include media-breakpoint-down(xs) {
+		margin-bottom: 7vw;
+	}
+
+	&:last-child {
+		margin-bottom: 1rem;
+	}
 }
 
 // Less than ideal non-flex solutions for older IE
